--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,10 +21,8 @@ builds:
       - linux
     goarch:
       - amd64
-      - '386'
-      - arm
       - arm64
-    binary: '{{ .ProjectName }}_v{{ .Version }}'
+    binary: '{{ .ProjectName }}'
 archives:
   - format: zip
     name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
