fix: ignore windows and arm64 build combo

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,6 +22,9 @@ builds:
     goarch:
       - amd64
       - arm64
+    ignore:
+      - goos: windows
+        goarch: arm64
     binary: '{{ .ProjectName }}'
 archives:
   - format: zip
