fix: allow for values that contain =

--- a/example.properties
+++ b/example.properties
@@ -1,4 +1,5 @@
 # test comment
 org.wibble.testCamelCaps=20
 org.wibble.test.long.property=this is a long prop that is space separated to test whether wrapping occurs in the go yaml lib
+org.wibble.brokerURL=tcp://wibble:61616?jms.useAsyncSend=true
 
