--- a/example.properties
+++ b/example.properties
@@ -1,5 +1,8 @@
 # test comment
 org.wibble.testCamelCaps=20
 org.wibble.test.long.property=this is a long prop that is space separated to test whether wrapping occurs in the go yaml lib
+# testing = in value
 org.wibble.brokerURL=tcp://wibble:61616?jms.useAsyncSend=true
+# testing - in key
+org.wibble.message-listener.s3.accessKey=blar
 
