test to check quoting is added

--- a/example.properties
+++ b/example.properties
@@ -5,4 +5,5 @@ org.wibble.test.long.property=this is a long prop that is space separated to tes
 org.wibble.brokerURL=tcp://wibble:61616?jms.useAsyncSend=true
 # testing - in key
 org.wibble.message-listener.s3.accessKey=blar
-
+# testing weird cron
+org.wibble.cronFormat=*/5 * * * * *
